# Flask_Learning_App

./: .env  .gitignore  COMPLETE_GUIDE.md  Project_Structure.txt  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  commands.py  forms.py  models.py  routes.py
app.egg-info/: SOURCES.txt
app/templates/: 404.html  500.html  add_item.html  base.html  index.html  item_detail.html  items.html
instance/: database.db
tests/: test_app.py
