[project]
name = "flask-learning-app"
version = "1.0.0"
description = "A simple scalable Flask app for learning Python programming"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.1.1",
    "wtforms>=3.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"